fix word wrap on pre code elements

--- a/web/src/styles/_markdown.scss
+++ b/web/src/styles/_markdown.scss
@@ -8,6 +8,7 @@ markdown pre {
 
 markdown code {
     background: $grey-light;
+    white-space: normal;
     padding: 0em 0.1em;
     margin: 0.05em;
 }
